fix spacing

--- a/src/scripts/blocks/ThreeHighlights/ThreeHighlights.scss
+++ b/src/scripts/blocks/ThreeHighlights/ThreeHighlights.scss
@@ -4,7 +4,7 @@
 .three-highlights {
     .container {
         display: flex;
-        padding: fn.toVw(228) fn.toVw(118) fn.toVw(47) fn.toVw(42);
+        padding: 0 fn.toVw(118) fn.toVw(47) fn.toVw(42);
         background-color: clr.$brown-65;
 
         .image-wrapper {
